# Jack

./: .flake8  README.md  pyproject.toml  setup.cfg  tox.ini
src/jack/: jack.py  jackerrors.py  jacklexer.py
tests/: test_arithmetic.py  test_lexer.py
