[metadata]
name = jack
description = jack programming language
long_description = file: README.md
license = LICENSE
platforms = linux
classifiers =
    Framework :: sly
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = 
    jack
install_requires = 
    sly
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
jack = py.typed

[flake8]
max-line-length = 160
per-file-ignores =
    # sly breaks python
    src/jack/jacklexer.py: F821
exclude = venv,.tox,.pytest_cache,.github
